[package]
name = "locktree-derive"
description = "Experimental compiler-checked deadlock-freedom (procmacro crate)"
license = "MIT"
version = "0.2.0"
authors = ["Carol Schulze <carol@ereski.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"
