[package]
name = "locktree-derive"
description = "Experimental compiler-checked deadlock-freedom (procmacro crate)"
license = "MIT"
version = "0.3.0"
authors = ["Carol Schulze <carol@ereski.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.105"

[dev-dependencies]
pretty_assertions = "1.3.0"
