[package]
name = "locktree"
description = "Experimental compiler-checked deadlock-freedom"
license = "MIT"
version = "0.3.0"
authors = ["Carol Schulze <carol@ereski.org>"]
edition = "2018"

[features]
default = ['async']
async = []
tokio_0_2 = ['tokio']

[dependencies]
locktree-derive = { version = "0.3", path = "../locktree-derive" }

tokio = { version = "1.23.0", default-features = false, features = ['sync'], optional = true }

[dev-dependencies]
tokio = { version = "1.23.0", default-features = false, features = ['macros', 'rt-multi-thread', 'sync'] }
trybuild = "1.0.72"
